change light bg color and fix z-index of mobile menu

--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -23,6 +23,7 @@
     height: 100vh;
     background-color: #1d1d1d;
     font-family:Arial, Helvetica, sans-serif;
+    z-index: 5;
 }
 
 .logo {
@@ -54,6 +55,7 @@
     text-decoration: none;
     color: #fff;
     padding: 10px 0;
+    font-size: larger;
 }
 
 .socials {
